css/style.css
/* ... */
img {
  width:100%;
}


#name {
  text-align:right;
  margin:0;
  color:white;
  text-shadow: 3px 3px 10px rgba(0,0,0,.8);
  font-size:1.5rem;
  line-height:30px;
  float:right;
  padding-right: 10px;
}

#name p {
  font-size: 1rem;
}

/*---------Nav---------*/


#menu {
    display:none;
  }


/*---------Body---------*/

body {
  margin:0;
}

.campfire h3 {
  text-align:center;
  font-size:2.5em;
  text-transform:uppercase;
  width:100%;
  padding: 20px 0;
  margin: 20px 0 0;
  font-family: 'Vast Shadow', cursive;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  border-top: 13px solid #09f;
  color: #2e2e2e;
  position: relative;
  z-index: 1;
}

.campfire ul {
  margin-top:0;
  padding:3% 0 0;
  border-top:13px solid #D63E3E;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  text-align:center;
  position: relative;
}

#read_more_camp {
  margin-left:10em;
  margin-bottom:4rem;
}

#read_more_camp a {
  border:1px solid orange;
  color:#09f;
  float:right;
  font-size:2rem;
}

.cts figcaption {
  color:#09f;
  margin-bottom: 15%;
  font-family:'Quicksand', sans-serif;
  font-size:1.3em;
  line-height: 2em;
  max-width:350px;
  text-align:center;
}

.cts img {
  border-top:5px solid orange;
  border-radius:30px;
  height:330px;
  width:100%;
  max-width:330px;
}

.camping-tips h3 {
  text-align:center;
  font-size:2.5em;
  text-transform:uppercase;
  width:100%;
  padding: 20px 0;
  margin: 20px 0 0;
  font-family: 'Vast Shadow', cursive;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  border-top: 13px solid #09f;
  color: #2e2e2e;
  position: relative;
  z-index: 1;
}

.camping-tips ul {
  margin-top:0;
  padding:3% 0 0;
  border-top:13px solid #D63E3E;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  text-align:center;
  position: relative;
}

.cts-right figcaption {
  color:#09f;
  margin-bottom: 15%;
  font-family:'Quicksand', sans-serif;
  font-size:1.3em;
  line-height: 2em;
  max-width:480px;
  text-align:center;
}

.cts-right img {
  border-top:5px solid orange;
  border-radius:30px;
  height:330px;
  width:100%;
  max-width:330px;
}

.rm {
  border:2px solid orange;

}


/*---------Links---------*/

a {
  text-decoration:none;
}

a:hover {
  color: #09f;
}

li {
  list-style-type:none;
}


/*---------Footer---------*/

.social img {
  height:35px;
  width:35px;
}

footer {
  clear:both;
  text-align:center;
/*  border-top:1px solid black;*/
  background-color: #fff;
  width:100%;
  height:100%;
  color:#09f;
  font-family:'Quicksand', sans-serif;
}

#home-footer {
/*  clear:both;*/
  text-align:center;
  width:100%;
/*  height:100px;*/
  color:#fff;
  font-family:'Quicksand', sans-serif;
  position:fixed;
  bottom: 0;
  margin-bottom:5px;
}



/*---------Responsiveness---------*/
@media screen and (min-width: 410px) {

  #wrapper {
    max-width:1100px;
    margin:auto;
    padding-top:5%;
  }

.cts li {
  max-width:410px;
  display:inline-block;
  margin: 0 5%;

}

.main-left {
  clear:both;
}

.main-right {
  clear:both;
}


.cts-right li {
  max-width:410px;
  display:inline-block;
  margin: 0 5%;
  }
}


@media screen and (min-width: 770px) {

  #name {
    float:left;
    text-align:left;
    margin-top:20px 0 40px;
    padding-left:10px;
    color:white;
    text-shadow: 3px 3px 10px rgba(0,0,0,.8);
    font-size: 1.4rem;
    line-height:18px;
    text-transform:uppercase;
    font-family: 'Cinzel', serif;
    color:white;
  }

  #name p {
    font-size: 1rem;
    line-height: 50px;
  }

  #menu a:link {
    color: white;
    text-shadow: 1px 1px 10px rgba(0,0,0,.8);
    text-align:center;
    text-transform:uppercase;
    font-family: 'Cinzel', serif;
  }

  #menu a:visited {
    color:white;
  }

  #menu a:hover {
    color: #09f;
  }

  #menu {
    float:right;
    padding:0;
    padding-right:10px;
    margin-top:20px;
  }

  #menu li {
    display:inline-block;
    margin: 0 0.8em;
    font-size: 1.05rem;
    position:relative;
  }

  .home-header h1 {
    clear:both;
    text-align:center;
    font-size: 5rem;
    text-shadow: 5px 5px 10px rgba(0,0,0,1);
    margin-top: 2.5em;
    line-height:75px;
  }

  .home-header p {
    font-size: 2em;
    text-shadow: 2px 2px 10px rgba(0,0,0,1);
    line-height:70px;
  }


  .blog {
    color: #fff;
    text-shadow: 2px 2px 10px rgba(0,0,0, 1);
    text-align:center;
    text-transform:uppercase;
    font-family: 'Cinzel', serif;
  }

  .blog ul {
    visibility: hidden;
    position:absolute;
    margin-left: -50%;
    padding: 15px 10px;
  }

  .blog ul li {
    line-height: 40px;
    width: 200px;
    text-align:left;
  }

  .blog:hover {
    color:#09f;
  }

  .blog:hover ul {
    display:block;
    opacity: 1;
    visibility: visible;
  }

  #menu ul li ul a:hover {
    color:orange;
  }
}
/* ... */

